# election-tokens

./: .gitignore  LICENSE  README.md  example-settings.ini  pyproject.toml
src/election_tokens/: __main__.py
templates/: 2022-agm.j2  2022-general-meeting.j2  2023-trustee-elections.j2  2025-trustee-elections.j2  agm-template.j2  exclusion-criteria.j2  test-template.j2
tests/: test_mail.py
tests/data/: example-voters.csv
tests/data/templates/: example-template.j2
