[tool.poetry]
name = "election-tokens"
version = "0.1.0"
description = "Generate and send out secure election tokens"
authors = ["James Graham <j.graham@society-rse.org>"]
license = "MIT"

[tool.poetry.scripts]
election-tokens = "election_tokens.__main__:cli"

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.0.1"
python-decouple = "^3.4"
Jinja2 = "^3.0.1"
pandas = "^1.3.3"

[tool.poetry.dev-dependencies]
yapf = "^0.31.0"
pytest = "^6.2.5"

[tool.yapf]
column_limit = 99

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
